--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -103,7 +103,7 @@
                                                                 <a href="doc-archive.html">Doc Archive</a>
                                                             </li>
                                                             <li>
-                                                                <a href="doclist.html" class="active">Doc Topic</a>
+                                                                <a href="article.html" class="active">Doc Topic</a>
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -111,7 +111,7 @@
                                                         <a href="#">
                                                             <p>More Categories</p>
                                                         </a>
-                                                        <a href="doclist.html">
+                                                        <a href="article.html">
                                                             <p>All docs</p>
                                                         </a>
                                                     </div>
@@ -136,7 +136,7 @@
                                                         <a href="#">
                                                             <p>More Categories</p>
                                                         </a>
-                                                        <a href="doclist.html">
+                                                        <a href="article.html">
                                                             <p>All docs</p>
                                                         </a>
                                                     </div>
@@ -198,7 +198,7 @@
                                                 <div class="tab-pane fade" id="v-pills-pages" role="tabpanel" aria-labelledby="v-pills-pages-tab">
                                                     <div class="d-flex">
                                                         <ul class="list-unstyled tab_list">
-                                                            <li><a href="doclist.html">Doc Topics</a>
+                                                            <li><a href="article.html">Doc Topics</a>
                                                             </li>
                                                             <li><a href="Onepage.html">Onepage</a>
                                                             </li>
@@ -212,7 +212,7 @@
                                                         <a href="#">
                                                             <p>More Categories</p>
                                                         </a>
-                                                        <a href="doclist.html">
+                                                        <a href="article.html">
                                                             <p>All docs</p>
                                                         </a>
                                                     </div>
@@ -265,7 +265,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="doclist.html" class="nav-link">
+                                    <a href="article.html" class="nav-link">
                                         <img src="img/sheet.png" alt="">
                                         <div class="text">
                                             <h5>docall</h5>
@@ -360,7 +360,7 @@
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon"></i>
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a href="doc-archive.html" class="nav-link">Doc Archive</a></li>
-                                <li class="nav-item"><a href="doclist.html" class="nav-link">DocTopics</a></li>
+                                <li class="nav-item"><a href="article.html" class="nav-link">DocTopics</a></li>
                                 <li class="nav-item dropdown submenu">
                                     <a href="#" class="nav-link">Shortcodes</a>
                                     <i class="arrow_carrot-down_alt2 mobile_dropdown_icon"></i>
@@ -439,7 +439,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="doclist.html" class="nav-link">
+                                    <a href="article.html" class="nav-link">
                                         <img src="img/sheet.png" alt="">
                                         <div class="text">
                                             <h5>docall</h5>
@@ -487,7 +487,7 @@
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
-                                    <a href="doclist.html" class="nav-link"><img src="img/side-nav/home.png" alt="">Home</a>
+                                    <a href="article.html" class="nav-link"><img src="img/side-nav/home.png" alt="">Home</a>
                                 </li>
                                 <li class="nav-item active">
                                     <a href="shortcode.html" class="nav-link"><img src="img/side-nav/briefcase.png" alt="briefcase">Shortcodes</a>
@@ -495,7 +495,7 @@
                                     <ul class="list-unstyled dropdown_nav">
                                         <li><a href="tab.html">Tabs</a></li>
                                         <li><a href="accordion.html">Accordion</a></li>
-                                        <li><a href="doclist.html" class="active">Doclist</a></li>
+                                        <li><a href="article.html" class="active">Doclist</a></li>
                                         <li><a href="notice.html">Notices</a></li>
                                         <li><a href="table.html">Table</a></li>
                                         <li><a href="lightbox.html">Image Lightbox</a></li>
@@ -617,7 +617,7 @@
                             <div class="scroll">
                                 <ul class="list-unstyled nav-sidebar">
                                     <li class="nav-item active">
-                                        <a href="doclist.html" class="nav-link"><img src="img/side-nav/home.png" alt="">Home</a>
+                                        <a href="article.html" class="nav-link"><img src="img/side-nav/home.png" alt="">Home</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="shortcode.html" class="nav-link"><img src="img/side-nav/briefcase.png" alt="briefcase">Shortcodes</a>
