--- a/src/main/resources/templates/fragments/menu-sidebar.html
+++ b/src/main/resources/templates/fragments/menu-sidebar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <aside class="doc_left_sidebarlist" th:fragment="menu-sidebar">
   <div class="open_icon" id="left">
@@ -10,52 +10,7 @@
       <li class="nav-item active">
         <a href="article.html" class="nav-link"><img src="/img/side-nav/home.png" alt="">Home</a>
       </li>
-      <li class="nav-item">
-        <a href="shortcode.html" class="nav-link"><img src="/img/side-nav/briefcase.png" alt="briefcase">Shortcodes</a>
-        <span class="icon"><i class="arrow_carrot-down"></i></span>
-        <ul class="list-unstyled dropdown_nav">
-          <li><a href="tab.html">Tabs</a></li>
-          <li><a href="accordion.html">Accordion</a></li>
-          <li><a href="notice.html">Notices</a></li>
-          <li><a href="table.html">Table</a></li>
-          <li><a href="lightbox.html">Image Lightbox</a></li>
-          <li><a href="tooltip.html">Tooltip</a></li>
-          <li><a href="can-use.html">Can I Use</a></li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a href="layouts.html" class="nav-link"><img src="/img/side-nav/coding.png" alt="">Layouts</a>
-        <span class="icon"><i class="arrow_carrot-down"></i></span>
-        <ul class="list-unstyled dropdown_nav">
-          <li><a href="layouts.html">Both Sidebar</a></li>
-          <li><a href="layout-leftsidebar.html">Left Sidebar</a></li>
-          <li><a href="layout-full.html">Full-width</a></li>
-          <li><a href="sticky-menu.html">Sticky Menu</a></li>
-          <li><a href="simple-footer.html">Simple Footer</a></li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a href="tour.html" class="nav-link"><img src="/img/side-nav/chat1.png" alt="">Tour</a>
-        <span class="icon"><i class="arrow_carrot-down"></i></span>
-        <ul class="list-unstyled dropdown_nav">
-          <li><a href="image-pointing.html">Image Hotspots</a></li>
-          <li><a href="tour.html">Application Interface</a></li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a href="typography.html" class="nav-link"><img src="/img/side-nav/document.png" alt="">Content</a>
-        <span class="icon"><i class="arrow_carrot-down"></i></span>
-        <ul class="list-unstyled dropdown_nav">
-          <li><a href="typography.html">Typography</a></li>
-          <li><a href="code.html">Code</a></li>
-          <li><a href="image.html">Image</a></li>
-          <li><a href="video.html">Video</a></li>
-          <li><a href="keyboard-shortcuts.html">Keyboard Shortcuts</a></li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a href="changelog.html" class="nav-link"><img src="/img/side-nav/document2.png" alt="">Change Log</a>
-      </li>
+      <th:block th:replace="~{fragments/menu :: menu}" th:with="marticles=${articles}"/>
     </ul>
     <ul class="list-unstyled nav-sidebar coding_nav">
       <li class="nav-item">
