--- a/src/main/resources/templates/fragments/menu-sidebar.html
+++ b/src/main/resources/templates/fragments/menu-sidebar.html
@@ -10,7 +10,7 @@
       <li class="nav-item active">
         <a href="article.html" class="nav-link"><img src="/img/side-nav/home.png" alt="">Home</a>
       </li>
-      <th:block th:replace="~{fragments/menu :: menu}" th:with="marticles=${articles}"/>
+      <th:block th:replace="~{fragments/menu-item :: menu-item}"/>
     </ul>
     <ul class="list-unstyled nav-sidebar coding_nav">
       <li class="nav-item">
