--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3589,6 +3589,9 @@ ul.list-style li:last-child {
   position: relative;
   cursor: pointer;
 }
+.nav-sidebar .nav-subitem {
+  position: relative;
+}
 .nav-sidebar .nav-item .nav-link {
   padding: 0;
   display: flex;
@@ -3617,9 +3620,6 @@ ul.list-style li:last-child {
 }
 .nav-sidebar .nav-item:hover .icon, .nav-sidebar .nav-item.active .icon {
   color: #10b3d6;
-}
-.nav-sidebar .nav-item.active .icon {
-  transform: rotate(-180deg);
 }
 .nav-sidebar .nav-item .dropdown_nav {
   padding-left: 32px !important;
