--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <footer class="simple_footer" th:fragment="footer">
     <img class="leaf_right" src="/img/home_one/leaf_footter.png" alt="">
