--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <div class="modal fade img_modal" id="exampleModal2" tabindex="-2" role="dialog" aria-hidden="false" th:fragment="modal">
   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
