--- a/src/main/resources/templates/fragments/preloader.html
+++ b/src/main/resources/templates/fragments/preloader.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <div id="preloader" th:fragment="preloader">
     <div id="ctn-preloader" class="ctn-preloader">
