--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -59,7 +59,7 @@
     <th:block th:replace="~{fragments/footer :: footer}"/>
 </div>
 <th:block th:replace="~{fragments/modal :: modal}"/>
-<th:block th:replace="~{fragments/script :: script}"/>
+<th:block th:replace="~{fragments/scripts :: scripts}"/>
 </body>
 
 </html>
