--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -60,6 +60,7 @@
 </div>
 <th:block th:replace="~{fragments/modal :: modal}"/>
 <th:block th:replace="~{fragments/scripts :: scripts}"/>
+<th:block layout:fragment="optional" />
 </body>
 
 </html>
