--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -555,7 +555,7 @@
     <section class="page_breadcrumb">
         <div class="container custom_container">
             <div class="row">
-                <div class="col-sm-7">
+                <div class="col-sm-5">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -565,6 +565,12 @@
                     </nav>
                 </div>
                 <div class="col-sm-5">
+                    <div class="content_control">
+                        <button class="doc_border_btn btn_small" data-toggle="modal" data-target="#createSubarticleModal">Создать подстраницу</button>
+                        <a th:href="@{/editor}" class="doc_border_btn btn_small">Редактировать</a>
+                    </div>
+                </div>
+                <div class="col-sm-2">
                     <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
                 </div>
             </div>
