--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -1,30 +1,26 @@
 <!doctype html>
 <html lang="en">
-<div class="modal fade img_modal" id="exampleModal2" tabindex="-2" role="dialog" aria-hidden="false" th:fragment="modal">
+<div class="modal fade img_modal" id="createSubarticleModal" tabindex="-2" role="dialog" aria-hidden="false" th:fragment="modal">
   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
     <i class=" icon_close"></i>
   </button>
   <div class="modal-dialog help_form" role="document">
     <div class="modal-content">
       <div class="shortcode_title">
-        <h1>How can we help?</h1>
-        <p>A premium WordPress theme with integrated Knowledge Base,<br>providing 24/7 community based support.</p>
+        <h1>Создание страницы</h1>
       </div>
-      <form action="#" class="contact_form">
+      <form th:action="@{/article/create}" method="post" class="contact_form">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Name">
+          <input type="text" class="form-control" placeholder="Заголовок" th:name="title">
         </div>
         <div class="form-group">
-          <input type="email" class="form-control" placeholder="Email">
+          <input type="text" class="form-control" placeholder="Адрес страницы" th:name="childLink">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Subject">
+          <input type="hidden" th:name="parentLink" th:value="${currentLink}">
         </div>
         <div class="form-group">
-          <textarea name="Message" id="massage" placeholder="Massage"></textarea>
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn action_btn">Send</button>
+          <button type="submit" class="btn action_btn">Создать</button>
         </div>
       </form>
     </div>
