--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -9,24 +9,14 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div id="editor" style="height: 500px;"></div>
+    <div id="editor" style="height: 1200px;"></div>
     <button onClick="saveArticle()" class="doc_border_btn btn_small">Сохранить</button>
-    <script>
-        function saveArticle() {
-            var queryString = window.location.search;
-            var urlParams = new URLSearchParams(queryString);
-            var currentLink = urlParams.get('currentLink');
-            $.post("/editor/save", {link: currentLink, content: editor.getMarkdown()})
-                .done(function() {
-                    window.location.href = currentLink;
-                });
-        }
-    </script>
+    <script th:replace="~{fragments/scripts :: save-article}"></script>
 </th:block>
 
 <th:block layout:fragment="optional">
     <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
-    <script th:replace="~{fragments/editor :: editor}"></script>
+    <script th:replace="~{fragments/scripts :: editor}"></script>
 </th:block>
 </body>
 </html>
