--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -44,21 +44,21 @@
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
                             <h3>Sign in to KbDoc platform</h3>
-                            <p>Don’t have an account yet? <a href="signup.html">Sign up here</a></p>
-                            <a href="#" class="btn-google"><img src="img/signup/gmail.png" alt=""><span class="btn-text">Sign in with Gmail</span></a>
+                            <p>Don’t have an account yet? <a href="/signup">Sign up here</a></p>
                         </div>
-                        <div class="divider">
-                            <span class="or-text">or</span>
-                        </div>
-                        <form action="#" class="row login_form">
+                        <div th:if="${param.error}">
+                            Invalid username and password.</div>
+                        <div th:if="${param.logout}">
+                            You have been logged out.</div>
+                        <form th:action="@{/signin}" method="post" class="row login_form">
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">Your email</div>
-                                <input type="email" class="form-control" id="email" placeholder="info@KbDoc.com">
+                                <input id="email" type="email" name="username" class="form-control"  placeholder="info@KbDoc.com">
                             </div>
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">Confirm password</div>
                                 <div class="confirm_password">
-                                    <input id="confirm-password" name="confirm-password" type="password" class="form-control" placeholder="5+ characters required" autocomplete="off">
+                                    <input id="confirm-password" type="password" name="password" class="form-control" placeholder="5+ characters required" autocomplete="off">
                                     <a href="#" class="forget_btn">Forgotten password?</a>
                                 </div>
                             </div>
