--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout}">
+      layout:decorate="~{fragments/layout}">
 
 <head>
     <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
