--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<th:block th:fragment="scripts">
+<th:block th:fragment="layout-scripts">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="/js/jquery-3.2.1.min.js"></script>
@@ -42,7 +42,7 @@
         const urlParams = new URLSearchParams(queryString);
         const articleLink = urlParams.get('currentLink');
         const editedContent = editor.getMarkdown()
-        $.post("/editor/save", {link: articleLink, content: editedContent})
+        $.post("/editor/save", { link: articleLink, content: editedContent })
             .done(function() {
                 window.location.href = articleLink;
             });
