--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -17,19 +17,7 @@
 </head>
 
 <body data-scroll-animation="true">
-    <div id="preloader">
-        <div id="ctn-preloader" class="ctn-preloader">
-            <div class="round_spinner">
-                <div class="spinner"></div>
-                <div class="text">
-                    <img src="img/spinner_logo.png" alt="">
-                    <h4><span>kb</span>Doc</h4>
-                </div>
-            </div>
-            <h2 class="head">Did You Know?</h2>
-            <p></p>
-        </div>
-    </div>
+    <th:block th:replace="~{fragments/preloader :: preloader}"/>
     <div class="body_wrapper">
         <section class="signup_area signup_area_height">
             <div class="row ml-0 mr-0">
