--- a/src/main/resources/templates/fragments/menu-item.html
+++ b/src/main/resources/templates/fragments/menu-item.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <th:block th:fragment="menu-item">
     <li th:each="article : ${menuArticles}" th:class="${menuItemClass} ?: 'nav-item'">
-        <a th:href="@{${article.link}}" th:text="${article.title}" class="nav-link">Shortcodes</a>
+        <a th:href="@{${article.link}}" class="nav-link">
+            <img src="/img/side-nav/document2.png" alt="article">
+            <th:block th:text="${article.title}">Shortcodes</th:block>
+        </a>
         <th:block th:if="${not #lists.isEmpty(article.childArticles)}">
             <span class="icon"><i class="arrow_carrot-down"></i></span>
             <ul class="list-unstyled dropdown_nav"
