--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -34,7 +34,7 @@
                             <h3>Create your KbDoc Account</h3>
                             <p>Already have an account? <a th:href="@{/signin}">Sign in</a></p>
                         </div>
-                        <form th:action="@{/register}" method="post" class="row login_form">
+                        <form th:action="@{/signup}" method="post" class="row login_form">
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">Your email</div>
                                 <input type="email" class="form-control" id="email" th:name="username" placeholder="info@KbDoc.com">
