--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="content">
+    <form class="contact_form">
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Заголовок" th:name="title" th:value="${title}">
+        </div>
+    </form>
+
     <div id="editor" style="height: 1200px;"></div>
     <button onClick="saveArticle()" class="doc_border_btn btn_small">Сохранить</button>
     <script th:replace="~{fragments/scripts :: save-article}"></script>
