Добавлено имя пользователя в url

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -24,7 +24,7 @@
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item active">
-                                    <a th:href="@{/article/home}" class="nav-link">
+                                    <a th:href="${homeArticleLink}" class="nav-link">
                                         <img src="/img/side-nav/home.png" alt="">
                                         <span th:text="${homeArticleTitle}">Главная страница</span>
                                     </a>
