--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -41,7 +41,7 @@
                         <form th:action="@{/signin}" method="post" class="row login_form">
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">Your email</div>
-                                <input id="email" type="email" name="username" class="form-control"  placeholder="info@KbDoc.com">
+                                <input id="email" type="text" name="username" class="form-control"  placeholder="info@KbDoc.com">
                             </div>
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">Confirm password</div>
