--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -37,7 +37,7 @@
                         <form th:action="@{/signup}" method="post" class="row login_form">
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">Your email</div>
-                                <input type="email" class="form-control" id="email" th:name="username" placeholder="info@KbDoc.com">
+                                <input type="text" class="form-control" id="email" th:name="username" placeholder="info@KbDoc.com">
                             </div>
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">Password</div>
