--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -10,7 +10,7 @@
 <th:block layout:fragment="content">
     <form class="contact_form">
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Заголовок" th:name="title" th:value="${title}">
+            <input type="text" class="form-control" placeholder="Заголовок" th:name="title" th:value="${currentArticle.title}">
         </div>
     </form>
 
