--- a/src/main/resources/templates/fragments/layout-header.html
+++ b/src/main/resources/templates/fragments/layout-header.html
@@ -567,8 +567,8 @@
                 <div class="col-sm-5">
                     <div class="content_control">
                         <button class="doc_border_btn btn_small" data-toggle="modal" data-target="#createSubarticleModal">Создать подстраницу</button>
-                        <a th:href="@{'/' + ${username} + '/edit?currentLink=' + ${currentLink}}" class="doc_border_btn btn_small">Редактировать страницу</a>
-                        <a th:href="@{'/' + ${username} + '/delete?currentLink=' + ${currentLink}}" class="doc_border_btn btn_small">Удалить страницу</a>
+                        <a th:href="@{'/' + ${username} + '/edit?currentLink=' + ${currentArticle.link}}" class="doc_border_btn btn_small">Редактировать страницу</a>
+                        <a th:href="@{'/' + ${username} + '/delete?currentLink=' + ${currentArticle.link}}" class="doc_border_btn btn_small">Удалить страницу</a>
                     </div>
                 </div>
                 <div class="col-sm-2">
