--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -17,7 +17,7 @@
           <input type="text" class="form-control" placeholder="Адрес страницы" th:name="childLink">
         </div>
         <div class="form-group">
-          <input type="hidden" th:name="parentLink" th:value="${currentLink}">
+          <input type="hidden" th:name="parentLink" th:value="${servletPath}">
         </div>
         <div class="form-group">
           <button type="submit" class="btn action_btn">Создать</button>
