--- a/src/main/resources/templates/fragments/layout-header.html
+++ b/src/main/resources/templates/fragments/layout-header.html
@@ -567,7 +567,7 @@
                 <div class="col-sm-5">
                     <div class="content_control">
                         <button class="doc_border_btn btn_small" data-toggle="modal" data-target="#createSubarticleModal">Создать подстраницу</button>
-                        <a th:href="@{'/editor' + ${servletPath}}" class="doc_border_btn btn_small">Редактировать страницу</a>
+                        <a th:href="@{'/article/edit' + ${servletPath}}" class="doc_border_btn btn_small">Редактировать страницу</a>
                         <a th:href="@{'/article/delete' + ${servletPath}}" class="doc_border_btn btn_small">Удалить страницу</a>
                     </div>
                 </div>
