--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -8,6 +8,14 @@
     <title>KbDoc</title>
 </head>
 
+<th:block layout:fragment="content-control">
+    <div class="content_control" th:if="${#authentication.name} eq ${username}">
+        <button class="doc_border_btn btn_small" data-toggle="modal" data-target="#createSubarticleModal">Создать подстраницу</button>
+        <a th:href="@{'/article/edit' + ${servletPath}}" class="doc_border_btn btn_small">Редактировать страницу</a>
+        <a th:href="@{'/article/delete' + ${servletPath}}" class="doc_border_btn btn_small">Удалить страницу</a>
+    </div>
+</th:block>
+
 <th:block layout:fragment="content">
     <div id="viewer" style="height: 1200px;"></div>
 </th:block>
