Revert "Добавлен breadcrumb"
This reverts commit 5aa2fc1cfc0990c1f372975da3811b6a2e7a613d.

--- a/src/main/resources/templates/fragments/layout-header.html
+++ b/src/main/resources/templates/fragments/layout-header.html
@@ -294,7 +294,13 @@
         <div class="container custom_container">
             <div class="row">
                 <div class="col-sm-5">
-                    <th:block th:replace="~{fragments/breadcrumb :: breadcrumb}"/>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a href="#">Docs</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                        </ol>
+                    </nav>
                 </div>
                 <div class="col-sm-5">
                     <th:block layout:fragment="content-control" />
