--- a/src/main/resources/templates/fragments/breadcrumb.html
+++ b/src/main/resources/templates/fragments/breadcrumb.html
@@ -1,12 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<th:block th:fragment="breadcrumb">
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li th:each="breadcrumb : ${breadcrumbs}" class="breadcrumb-item">
-                <a th:href="@{${breadcrumb.link}}" th:text="${breadcrumb.title}">Home</a>
-            </li>
-        </ol>
-    </nav>
-</th:block>
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+
+</body>
 </html>
