--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -73,13 +73,22 @@
                             <option value="linux" data-content="<i class='fab fa-linux'></i> Linux">Linux</option>
                         </select>
                         <div id="font-switcher" class="d-flex justify-content-between align-items-center">
-                            <div class="doc_switch">
-                                <label for="something" class="tab-btn tab-btns"><i class="icon_lightbulb_alt"></i></label>
-                                <input type="checkbox" name="something" id="something" class="tab_switcher">
-                                <label for="something" class="tab-btn"><i class="far fa-moon"></i></label>
-                            </div>
+                            <div id="rvfs-controllers" class="fontsize-controllers group"></div>
                             <a href="javascript:window.print()" class="print"><i class="icon_printer"></i></a>
                         </div>
+                        <div class="doc_switch">
+                            <label for="something" class="tab-btn tab-btns"><i class="icon_lightbulb_alt"></i></label>
+                            <input type="checkbox" name="something" id="something" class="tab_switcher">
+                            <label for="something" class="tab-btn"><i class="far fa-moon"></i></label>
+                        </div>
+                        <h6>On this page:</h6>
+                        <nav class="list-unstyled doc_menu" id="navbar-example3">
+                            <a href="#documentation" class="nav-link active">Documentation</a>
+                            <a href="#getting" class="nav-link">Getting started</a>
+                            <a href="#version" class="nav-link">Test KbDoc Version</a>
+                            <a href="#developer" class="nav-link">Not a developer?</a>
+                            <a href="#help" class="nav-link">We're here to help!</a>
+                        </nav>
                     </div>
                 </div>
             </div>
