--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -11,7 +11,10 @@
 <th:block layout:fragment="content-control">
     <div class="content_control" th:if="${#authentication.name} eq ${username}">
         <button class="doc_border_btn btn_small" data-toggle="modal" data-target="#createSubarticleModal">Создать подстраницу</button>
-        <a th:href="@{'/article/edit' + ${servletPath}}" class="doc_border_btn btn_small">Редактировать страницу</a>
+        <a th:href="@{'/' + ${username} + '/edit' + ${#strings.substringAfter(currentArticle.link, username)}}"
+           class="doc_border_btn btn_small">
+            Редактировать страницу
+        </a>
         <a th:href="@{'/article/delete' + ${servletPath}}" class="doc_border_btn btn_small">Удалить страницу</a>
     </div>
 </th:block>
