--- a/src/main/resources/templates/fragments/layout-header.html
+++ b/src/main/resources/templates/fragments/layout-header.html
@@ -294,13 +294,7 @@
         <div class="container custom_container">
             <div class="row">
                 <div class="col-sm-5">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
-                        </ol>
-                    </nav>
+                    <th:block th:insert="~{fragments/breadcrumb :: breadcrumb}"/>
                 </div>
                 <div class="col-sm-5">
                     <th:block layout:fragment="content-control" />
