--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
-                                <li class="nav-item active">
+                                <li class="nav-item">
                                     <a th:href="${homeArticle.link}" class="nav-link">
                                         <img src="/img/side-nav/home.png" alt="">
                                         <span th:text="${homeArticle.title}">Главная страница</span>
