Добавлена аутентификация запросов на изменение статьи

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -15,7 +15,7 @@
            class="doc_border_btn btn_small">
             Редактировать страницу
         </a>
-        <a th:href="@{'/article/delete' + ${servletPath}}" class="doc_border_btn btn_small">Удалить страницу</a>
+        <a th:href="@{'/delete' + ${servletPath}}" class="doc_border_btn btn_small">Удалить страницу</a>
     </div>
 </th:block>
 
