--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -54,14 +54,14 @@
                         </div>
                     </aside>
                 </div>
-                <div class="col-lg-7 col-md-8">
+                <div class="col-lg-9 col-md-12">
                     <div id="post" class="documentation_info">
                         <article class="documentation_body" id="documentation">
                             <div layout:fragment="content"></div>
                         </article>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-4 doc_right_mobile_menu">
+                <!--<div class="col-lg-2 col-md-4 doc_right_mobile_menu">
                     <div class="open_icon" id="right">
                         <i class="arrow_carrot-left"></i>
                         <i class="arrow_carrot-right"></i>
@@ -90,7 +90,7 @@
                             <a href="#help" class="nav-link">We're here to help!</a>
                         </nav>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
