--- a/src/main/resources/templates/fragments/layout-header.html
+++ b/src/main/resources/templates/fragments/layout-header.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.w3.org/1999/xhtml">
 <header th:fragment="header">
     <nav class="navbar navbar-expand-lg menu_one display_none">
-        <div class="container custom_container">
+        <div class="container custom_container" style="padding-bottom: 37px;padding-top: 37px;">
             <a class="navbar-brand sticky_logo" href="index.html">
                 <img src="/img/logo-w.png" srcset="/img/logo-w2x.png 2x" alt="logo">
                 <img src="/img/logo.png" srcset="/img/logo-2x.png 2x" alt="logo">
