--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -68,6 +68,7 @@
 </div>
 <th:block th:replace="~{fragments/modal :: modal}"/>
 <th:block th:replace="~{account :: account}"/>
+<th:block th:replace="~{search :: search}"/>
 <th:block th:replace="~{fragments/scripts :: layout-scripts}"/>
 <th:block layout:fragment="optional" />
 </body>
