Перевод на русский язык

--- a/src/main/resources/templates/fragments/layout-header.html
+++ b/src/main/resources/templates/fragments/layout-header.html
@@ -284,7 +284,7 @@
         <div class="container custom_container">
             <div class="banner_search_form banner_search_form_two">
                 <div class="input-group">
-                    <input th:name="searchText" type="search" class="form-control" placeholder='Search ("/" to focus)'>
+                    <input th:name="searchText" type="search" class="form-control" placeholder='Поиск ("/" для фокусировки)'>
                     <button onclick="searchArticle()" type="submit"><i class="icon_search"></i></button>
                     <script th:replace="~{fragments/scripts :: search-article}"></script>
                 </div>
