--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -31,8 +31,8 @@
                 <div class="sign_right signup_right">
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
-                            <h3>Sign in to KbDoc platform</h3>
-                            <p>Don’t have an account yet? <a href="/signup">Sign up here</a></p>
+                            <h3>Вход в KbDoc платформу</h3>
+                            <p>Нет аккаунта? <a href="/signup">Зарегистрируйтесь здесь</a></p>
                         </div>
                         <div th:if="${param.error}">
                             Invalid username and password.</div>
@@ -40,19 +40,18 @@
                             You have been logged out.</div>
                         <form th:action="@{/signin}" method="post" class="row login_form">
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Your email</div>
+                                <div class="small_text">Имя пользователя</div>
                                 <input id="email" type="text" name="username" class="form-control"  placeholder="info@KbDoc.com">
                             </div>
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Confirm password</div>
+                                <div class="small_text">Пароль</div>
                                 <div class="confirm_password">
                                     <input id="confirm-password" type="password" name="password" class="form-control" placeholder="5+ characters required" autocomplete="off">
-                                    <a href="#" class="forget_btn">Forgotten password?</a>
                                 </div>
                             </div>
 
                             <div class="col-lg-12 text-center">
-                                <button type="submit" class="btn action_btn thm_btn">Sign in</button>
+                                <button type="submit" class="btn action_btn thm_btn">Войти</button>
                             </div>
                         </form>
                     </div>
