--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -31,24 +31,24 @@
                 <div class="sign_right signup_right">
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
-                            <h3>Create your KbDoc Account</h3>
-                            <p>Already have an account? <a th:href="@{/signin}">Sign in</a></p>
+                            <h3>Создать ваш KbDoc аккаунт</h3>
+                            <p>Уже есть аккаунт? <a th:href="@{/signin}">Вход</a></p>
                         </div>
                         <form th:action="@{/signup}" method="post" class="row login_form">
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Your email</div>
+                                <div class="small_text">Имя пользователя</div>
                                 <input type="text" class="form-control" id="email" th:name="username" placeholder="info@KbDoc.com">
                             </div>
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Password</div>
-                                <input id="signup-password" name="signup-password" type="password" class="form-control" placeholder="5+ characters required" autocomplete="off" th:name="password">
+                                <div class="small_text">Пароль</div>
+                                <input id="signup-password" name="signup-password" type="password" class="form-control" placeholder="Введите пароль" autocomplete="off" th:name="password">
                             </div>
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Confirm password</div>
-                                <input id="confirm-password" name="confirm-password" type="password" class="form-control" placeholder="5+ characters required" autocomplete="off" th:name="confirmPassword">
+                                <div class="small_text">Подтвердите пароль</div>
+                                <input id="confirm-password" name="confirm-password" type="password" class="form-control" placeholder="Введите пароль повторно" autocomplete="off" th:name="confirmPassword">
                             </div>
                             <div class="col-lg-12 text-center">
-                                <button type="submit" class="btn action_btn thm_btn">Create an account</button>
+                                <button type="submit" class="btn action_btn thm_btn">Создать аккаунт</button>
                             </div>
                         </form>
                     </div>
